--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -22,5 +22,8 @@ status-website:
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
 
+assignees:
+  - mschneider82
+
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
